[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-prep"
version = "0.1.0"
description = "Convert raw MP3 audio into pretraining-ready WAV/FLAC, with validation and dataset manifest output."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "soundfile>=0.12",
]

[project.scripts]
audio-prep = "audio_prep.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/audio_prep"]

# ---------------------------------------------------------------------------
# Ruff: linting + formatting (replaces black/isort/flake8)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "BLE", # blind except
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["audio_prep"]

# ---------------------------------------------------------------------------
# mypy: static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["tests/fixtures"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=audio_prep --cov-report=term-missing"

[tool.coverage.run]
source = ["src/audio_prep"]
