[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-prep-pipeline"
version = "0.1.2"
description = "Convert raw MP3 audio into pretraining-ready WAV/FLAC, with validation and dataset manifest output."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["audio", "ffmpeg", "preprocessing", "speech", "pretraining", "vad"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # NumPy >=2.3 ships stubs that use Python 3.12-only type statement syntax,
    # which breaks mypy when this project targets Python 3.10 compatibility.
    "numpy>=1.24,<2.3",
    "soundfile>=0.12",
    "torch>=2.0.0",
    "silero-vad>=6.2.1",
    "tqdm>=4.66.0",
]

[project.scripts]
audio-prep = "audio_prep.cli:main"

[project.urls]
Homepage = "https://github.com/nattkorat/audio-prep-pipeline"
Repository = "https://github.com/nattkorat/audio-prep-pipeline"
Issues = "https://github.com/nattkorat/audio-prep-pipeline/issues"
Documentation = "https://nattkorat.github.io/audio-prep-pipeline/"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
# Backward-compatible no-op extra: chunking dependencies are included in the
# base install so `audio-prep convert` and `audio-prep chunk` are both ready
# after `pip install audio-prep-pipeline`.
chunking = []

[tool.hatch.build.targets.wheel]
packages = ["src/audio_prep"]

# ---------------------------------------------------------------------------
# Ruff: linting + formatting (replaces black/isort/flake8)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "BLE", # blind except
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["audio_prep"]

# ---------------------------------------------------------------------------
# mypy: static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["tests/fixtures"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=audio_prep --cov-report=term-missing"

[tool.coverage.run]
source = ["src/audio_prep"]
